--- a/Frontend-DevFolder/Main/Pages/Assets/CSS/Notifications.css
+++ b/Frontend-DevFolder/Main/Pages/Assets/CSS/Notifications.css
@@ -6,7 +6,7 @@ body {
     background: #f4f4f4;
     margin: 0;
     padding: 0;
-    padding-top: 20px;
+    padding-top: 10px;
   }
 
 
@@ -83,14 +83,17 @@ body {
     background: #c82333;
   }
 
-#footer {
-    margin-top: auto; /* Pushes footer to the bottom */
-    padding: 20px;
-    text-align: center;
-    width: 100%;
-    font-size: 14px;
-    background: #007BFF;
-    color: #fff;
+ /* Footer Stays at Bottom */
+ #footer {
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+  font-size: 14px;
+  background: #007BFF;
+  color: white;
+  position: relative;
+  bottom: 0;
+  margin-top: auto; 
 }
 
   
